# RFID-Dashboard

./: package-lock.json  package.json  tsconfig.json
public/: index.html
src/: globals.d.ts  index.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/sqlv/: Cargo.toml
src-tauri/sqlv/src/: plugin.rs
src-tauri/sqlv/src/model/: db.rs  mod.rs  users.rs
src-tauri/src/: main.rs
src-tauri/src/model/: access_logs.rs  db.rs
src/Pages/: index.tsx
src/Pages/Card/AccessLog/: List.tsx  index.tsx
src/Pages/Card/Add/: index.tsx
src/Pages/Card/List/: index.tsx
src/Pages/Card/Shared/: TableSkeleton.tsx
src/Pages/Card/Users/: UserDialog.tsx  index.tsx
src/Pages/Login/: ConnectionForm.tsx  UserAuthForm.tsx  index.tsx
src/Reusable/Alert/: index.tsx
src/Reusable/Table/: CustomInput.tsx  custom.scss  index.tsx
src/Utilities/: csv.util.tsx  db.util.tsx  fs.util.tsx  notification.util.tsx  pdf.util.tsx
