[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all"] }
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
tauri-plugin-sql = { git = "https://github.com/tauri-apps/tauri-plugin-sql", rev = "b13efd1e9d8f6c862b67917f3c62536ed1c64e9c", features = ["postgres"] }
# DB Libs
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
sqlb = "0.0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
chrono = "0.4"
sqlv = { path = "./sqlv" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

 # or "postgres", or "mysql"
#branch = "main"
